--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "vercel": "^37.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
