--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/oswald": "^5.0.21",
     "@fontsource/roboto": "^5.0.14",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.0.0",
+    "@mui/system": "^6.0.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "vercel": "^37.1.2"
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
