--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@mui/material": "^6.0.0",
     "@mui/system": "^6.0.0",
     "lucide-react": "^0.436.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "vercel": "^32.3.0"
   },
@@ -27,8 +27,8 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.7",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
